[project]
  authors         = [{ name = "kodiitulip", email = "kodii.tulip@gmail.com" }]
  dependencies    = ["platformdirs>=4.4.0", "tomlkit>=0.13.3", "typer>=0.17.4"]
  description     = "Uma aplicação para geração de dungeons"
  name            = "darkest-gen"
  readme          = "README.md"
  requires-python = ">=3.12"
  version         = "0.1.0"

  [project.scripts]
    darkest-gen = "darkest_gen:main"

[build-system]
  build-backend = "uv_build"
  requires      = ["uv_build>=0.8.14,<0.9.0"]
